--- a/messaging_app/requirements.txt
+++ b/messaging_app/requirements.txt
@@ -1,115 +1,13 @@
-amqp==5.2.0
-argcomplete==3.1.4
-attrs==23.2.0
-autobahn==22.7.1
-Automat==22.10.0
-Babel==2.10.3
-base58==1.0.3
-bcrypt==3.2.2
-billiard==4.2.0
-blinker==1.7.0
-cassandra-driver==3.29.0
-cassandra-pylib==0.0.0
-cbor==1.0.0
+Django==5.0.7          # core framework
+djangorestframework==3.15.2  # REST API support
+django-cors-headers==4.4.0   # handle CORS for APIs
+mysqlclient==2.2.4     # MySQL database driver
+
+# Celery & task queue stack
 celery==5.3.6
-certifi==2023.11.17
-cffi==1.16.0
-chardet==5.2.0
-click==8.1.6
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-cloud-init==25.1.4
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-constantly==23.10.4
-cryptography==41.0.7
-dbus-python==1.3.2
-distro==1.9.0
-distro-info==1.7+build1
-ecdsa==0.18.0
-ephem==4.1.5
-flatbuffers==2.0.8+dfsg1
-GeoIP==1.3.2
-geomet==1.0.0
-gyp==0.1
-hkdf==0.0.3
-httplib2==0.20.4
-humanize==4.9.0
-hyperlink==21.0.0
-idna==3.6
-incremental==22.10.0
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-kombu==5.3.5
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-lz4==4.0.2+dfsg
-magic-wormhole==0.12.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mnemonic==0.19
-msgpack==1.0.3
-netifaces==0.11.0
-oauthlib==3.2.2
-packaging==24.0
-passlib==1.7.4
-pipx==1.4.3
-platformdirs==4.2.0
-ply==3.11
-prompt-toolkit==3.0.43
-psutil==5.9.8
-py-ubjson==0.16.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.11.1
-pycparser==2.21
-pycurl==7.45.3
-Pygments==2.17.2
-PyGObject==3.48.2
-PyHamcrest==2.1.0
-PyJWT==2.7.0
-PyNaCl==1.5.0
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pypng==0.20231004.0
-PyQRCode==1.2.1
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu5
-python-dateutil==2.8.2
-python-memcached==1.58
-python-snappy==0.5.3
-PyTrie==0.4.0
-pytz==2024.1
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-service-identity==24.1.0
-setuptools==68.1.2
-six==1.16.0
-sortedcontainers==2.4.0
-spake2==0.8
-systemd-python==235
-tqdm==0.0.0
-Twisted==24.3.0
-txaio==23.1.1
-txtorcon==23.11.0
-typing_extensions==4.10.0
-u-msgpack-python==2.3.0
-ubuntu-pro-client==8001
-ujson==5.9.0
-unattended-upgrades==0.1
-urllib3==2.0.7
-userpath==1.9.1
-vine==5.0.0
-wadllib==1.3.6
-wcwidth==0.2.5
-wheel==0.42.0
-wsaccel==0.6.3
-zope.interface==6.1
+amqp==5.2.0
+kombu==5.3.7
+redis==5.0.7           # broker/backend option
+
+# API documentation
+drf-yasg==1.21.7
