--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -11,14 +11,15 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
-      - "3307:3306"   # host:container mapping
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
 
   web:
     build: .
     container_name: messaging_web
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py migrate &&python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
