--- a/messaging_app/deployment.yaml
+++ b/messaging_app/deployment.yaml
@@ -1,38 +1,59 @@
+
+# deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: messaging-app-deployment
+  name: django-messaging-app
   labels:
-    app: messaging-app
+    app: django-messaging
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: messaging-app
+      app: django-messaging
   template:
     metadata:
       labels:
-        app: messaging-app
+        app: django-messaging
     spec:
       containers:
-      - name: messaging-app
-        image: messaging-app:latest       # local image in Minikube
+      - name: django-app
+        image: your-django-image:1.0
         ports:
         - containerPort: 8000
         env:
-        - name: DJANGO_SETTINGS_MODULE
-          value: "messaging_app.settings"
+        - name: DJANGO_ENV
+          value: "production"
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "256Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+        livenessProbe:
+          httpGet:
+            path: /health/
+            port: 8000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /health/
+            port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 5
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: messaging-app-service
+  name: django-service
 spec:
+  type: ClusterIP
   selector:
-    app: messaging-app
+    app: django-messaging
   ports:
     - protocol: TCP
       port: 8000
       targetPort: 8000
-  type: ClusterIP
-
